setting up mongodb connection and embeddings model open-source from HF

--- a/lc-promptengineering.ipynb
+++ b/lc-promptengineering.ipynb
@@ -2,15 +2,487 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "import pymongo\n",
+    "\n",
+    "load_dotenv()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Connection MongoDB\n",
+    "\n",
+    "client = pymongo.MongoClient(os.getenv(\"MONGODB_URI\"))\n",
+    "db = client.sample_mflix\n",
+    "collection = db.movies"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# EMBEDDINGS MODEL\n",
+    "\n",
+    "import requests\n",
+    "\n",
+    "hf_token = os.getenv(\"HF_EMBEDDINGS_MODEL\")\n",
+    "embedding_url = \"https://api-inference.huggingface.co/pipeline/feature-extraction/sentence-transformers/all-MiniLM-L6-v2\"\n",
+    "\n",
+    "def generate_embedding(text: str) -> list[float]:\n",
+    "\n",
+    "\tresponse = requests.post(\n",
+    "\t\tembedding_url,\n",
+    "\t\theaders={\"Authorization\": f\"Bearer {hf_token}\"},\n",
+    "\t\tjson={\"inputs\": text})\n",
+    "\n",
+    "\tif response.status_code != 200:\n",
+    "\t\traise ValueError(f\"Request failed with status code {response.status_code}: {response.text}\")\n",
+    "\treturn response.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[-0.018378762528300285,\n",
+       " -0.004090098198503256,\n",
+       " -0.05688106268644333,\n",
+       " 0.04963552951812744,\n",
+       " -0.012099748477339745,\n",
+       " -0.05118146911263466,\n",
+       " -0.051344823092222214,\n",
+       " 0.027674200013279915,\n",
+       " 0.05805325508117676,\n",
+       " 0.06062712147831917,\n",
+       " -0.015075350180268288,\n",
+       " 0.0469198003411293,\n",
+       " 0.027738826349377632,\n",
+       " 0.0260225348174572,\n",
+       " -0.04219803959131241,\n",
+       " 0.051263850182294846,\n",
+       " 0.053365569561719894,\n",
+       " -0.03031042031943798,\n",
+       " 0.05268748477101326,\n",
+       " -0.05061221495270729,\n",
+       " -0.09596119076013565,\n",
+       " -0.04540492966771126,\n",
+       " 0.04326219856739044,\n",
+       " 0.007739016320556402,\n",
+       " 0.03024294599890709,\n",
+       " -0.014857375994324684,\n",
+       " -0.02228539250791073,\n",
+       " 0.007296570111066103,\n",
+       " -0.036453768610954285,\n",
+       " -0.08005659282207489,\n",
+       " -0.018378784880042076,\n",
+       " 0.039798982441425323,\n",
+       " -0.0011144222225993872,\n",
+       " -0.0160690750926733,\n",
+       " -0.10601413995027542,\n",
+       " 0.012727335095405579,\n",
+       " 0.08525847643613815,\n",
+       " -0.000773862237110734,\n",
+       " -0.03607344627380371,\n",
+       " -0.08204860985279083,\n",
+       " -0.02962234430015087,\n",
+       " -0.002093549817800522,\n",
+       " -0.020825767889618874,\n",
+       " -0.009043151512742043,\n",
+       " 0.09025052189826965,\n",
+       " -0.046462152153253555,\n",
+       " -0.04231158643960953,\n",
+       " 0.0493474155664444,\n",
+       " 0.09621753543615341,\n",
+       " 0.05238153412938118,\n",
+       " 0.020039597526192665,\n",
+       " -0.11380163580179214,\n",
+       " -0.001597434631548822,\n",
+       " 0.05423485487699509,\n",
+       " 0.048673756420612335,\n",
+       " 0.09358697384595871,\n",
+       " -0.07001469284296036,\n",
+       " -0.02867243066430092,\n",
+       " -0.07983532547950745,\n",
+       " -0.01338715199381113,\n",
+       " 0.06077625975012779,\n",
+       " -0.04675232246518135,\n",
+       " -0.06944119185209274,\n",
+       " 0.012252931483089924,\n",
+       " 0.018197650089859962,\n",
+       " 0.007928723469376564,\n",
+       " -0.007239731028676033,\n",
+       " 0.07861655205488205,\n",
+       " 0.008629916235804558,\n",
+       " -0.03166494891047478,\n",
+       " -0.0071725742891430855,\n",
+       " 0.011160289868712425,\n",
+       " -0.06858010590076447,\n",
+       " 0.04361221566796303,\n",
+       " -0.001408795127645135,\n",
+       " 0.04408887401223183,\n",
+       " 0.017134729772806168,\n",
+       " -0.08438466489315033,\n",
+       " -0.001343145384453237,\n",
+       " 0.06793855130672455,\n",
+       " -0.09487628936767578,\n",
+       " -0.061433956027030945,\n",
+       " -0.009821059182286263,\n",
+       " -0.03744276985526085,\n",
+       " 0.018070681020617485,\n",
+       " -0.0863795354962349,\n",
+       " 0.03565054014325142,\n",
+       " -0.041174598038196564,\n",
+       " -0.07281558960676193,\n",
+       " 0.003188757924363017,\n",
+       " 0.0640464723110199,\n",
+       " 0.061135075986385345,\n",
+       " 0.05517004430294037,\n",
+       " 0.03174440190196037,\n",
+       " -0.016498297452926636,\n",
+       " 0.02503795735538006,\n",
+       " 0.0687086433172226,\n",
+       " 0.0116844167932868,\n",
+       " 0.014893589541316032,\n",
+       " 0.029913906008005142,\n",
+       " -0.05222422257065773,\n",
+       " 0.02451280876994133,\n",
+       " 0.03760363534092903,\n",
+       " -0.0951634868979454,\n",
+       " 0.03409215435385704,\n",
+       " 0.015053946524858475,\n",
+       " 0.06975400447845459,\n",
+       " 0.006406852044165134,\n",
+       " -0.04245155304670334,\n",
+       " -0.000729044375475496,\n",
+       " -0.019618019461631775,\n",
+       " 0.011792853474617004,\n",
+       " -0.06783005595207214,\n",
+       " -0.041209425777196884,\n",
+       " -0.03683294355869293,\n",
+       " 0.04376925155520439,\n",
+       " -0.01828966662287712,\n",
+       " -0.007494322489947081,\n",
+       " -0.06307177990674973,\n",
+       " 0.0785408541560173,\n",
+       " 0.02274930290877819,\n",
+       " 0.09018350392580032,\n",
+       " 0.009719128720462322,\n",
+       " -0.0233580581843853,\n",
+       " 0.00293914251960814,\n",
+       " -0.028060344979166985,\n",
+       " 0.038318976759910583,\n",
+       " 1.3539869231809131e-33,\n",
+       " 0.10788290947675705,\n",
+       " -0.019874416291713715,\n",
+       " 0.037584319710731506,\n",
+       " -0.05164644494652748,\n",
+       " 0.046699848026037216,\n",
+       " 0.021079126745462418,\n",
+       " -0.0016599945956841111,\n",
+       " 0.007443492766469717,\n",
+       " -0.16135816276073456,\n",
+       " -0.0005507462774403393,\n",
+       " -0.054715853184461594,\n",
+       " 0.131482794880867,\n",
+       " 0.015691129490733147,\n",
+       " -0.01803787797689438,\n",
+       " 0.11148611456155777,\n",
+       " -0.046144500374794006,\n",
+       " 0.020495502278208733,\n",
+       " 0.08343596756458282,\n",
+       " 0.08336309343576431,\n",
+       " -0.01254176627844572,\n",
+       " 0.012066739611327648,\n",
+       " 0.0341363251209259,\n",
+       " -0.04605287313461304,\n",
+       " 0.042394690215587616,\n",
+       " 0.08714469522237778,\n",
+       " 0.0646609514951706,\n",
+       " 0.00807669572532177,\n",
+       " 0.01740332692861557,\n",
+       " 0.06563588231801987,\n",
+       " 0.03632233664393425,\n",
+       " -0.05939356982707977,\n",
+       " -0.02353585883975029,\n",
+       " -0.06834782660007477,\n",
+       " 0.04630583897233009,\n",
+       " -0.005812846124172211,\n",
+       " 0.002563825808465481,\n",
+       " -0.11389303207397461,\n",
+       " -0.08282317966222763,\n",
+       " -0.014861922711133957,\n",
+       " -0.04467656463384628,\n",
+       " 0.011398401111364365,\n",
+       " 0.04435483366250992,\n",
+       " -0.02613886445760727,\n",
+       " -0.0394885316491127,\n",
+       " -0.042790792882442474,\n",
+       " 0.08381924778223038,\n",
+       " 0.01695406250655651,\n",
+       " -0.04412977397441864,\n",
+       " 0.06555972993373871,\n",
+       " 0.013715183362364769,\n",
+       " -0.04781072959303856,\n",
+       " -0.0434197299182415,\n",
+       " -0.08807384222745895,\n",
+       " 0.11162371188402176,\n",
+       " 0.01864662393927574,\n",
+       " 0.007006185594946146,\n",
+       " 0.01751314476132393,\n",
+       " 0.010311942547559738,\n",
+       " 0.0041194804944098,\n",
+       " -0.008933814242482185,\n",
+       " -0.04551286622881889,\n",
+       " 0.009850982576608658,\n",
+       " 0.0005548314657062292,\n",
+       " -0.004319654777646065,\n",
+       " -0.011121181771159172,\n",
+       " -0.031192714348435402,\n",
+       " -0.028039097785949707,\n",
+       " 0.04222142696380615,\n",
+       " -0.045535046607255936,\n",
+       " 0.08152353763580322,\n",
+       " 0.017531929537653923,\n",
+       " 0.056763701140880585,\n",
+       " 0.04665599763393402,\n",
+       " -0.010981172323226929,\n",
+       " -0.020702915266156197,\n",
+       " -0.01197008416056633,\n",
+       " -0.0012908191420137882,\n",
+       " -0.04263804852962494,\n",
+       " -0.10422181338071823,\n",
+       " -0.0036675326991826296,\n",
+       " 0.02610735408961773,\n",
+       " -0.08964227139949799,\n",
+       " -0.012182680889964104,\n",
+       " -0.0037708464078605175,\n",
+       " -0.004813419654965401,\n",
+       " 0.10087137669324875,\n",
+       " 0.012878340668976307,\n",
+       " -0.005919338669627905,\n",
+       " 0.005737419240176678,\n",
+       " -0.02222876064479351,\n",
+       " -0.047513216733932495,\n",
+       " 0.06591860949993134,\n",
+       " 0.03152860701084137,\n",
+       " -0.03575830161571503,\n",
+       " -0.03253549337387085,\n",
+       " -6.08550945862302e-34,\n",
+       " -0.003878515213727951,\n",
+       " -0.15235856175422668,\n",
+       " 0.03147348761558533,\n",
+       " 0.060921721160411835,\n",
+       " 0.06264101713895798,\n",
+       " -0.02655659057199955,\n",
+       " -0.049351565539836884,\n",
+       " 0.05247402563691139,\n",
+       " -0.030475109815597534,\n",
+       " -0.04687584936618805,\n",
+       " -0.035364553332328796,\n",
+       " -0.07764001935720444,\n",
+       " -0.01862146332859993,\n",
+       " -0.03679193928837776,\n",
+       " -0.039155133068561554,\n",
+       " -0.03568660840392113,\n",
+       " 0.00473145442083478,\n",
+       " -0.13372325897216797,\n",
+       " -0.01931910775601864,\n",
+       " -0.0017917761579155922,\n",
+       " -0.09110315144062042,\n",
+       " 0.034938134253025055,\n",
+       " -0.01215178519487381,\n",
+       " -0.02809574268758297,\n",
+       " 0.06699797511100769,\n",
+       " -0.042913198471069336,\n",
+       " -0.11849338561296463,\n",
+       " -0.08007854223251343,\n",
+       " -0.04007852077484131,\n",
+       " 0.022012673318386078,\n",
+       " -0.01969013549387455,\n",
+       " -0.0027085132896900177,\n",
+       " -0.03040391393005848,\n",
+       " -0.05054137110710144,\n",
+       " -0.03366883844137192,\n",
+       " 0.002185444114729762,\n",
+       " 0.018849922344088554,\n",
+       " 0.07330293953418732,\n",
+       " 0.014804941602051258,\n",
+       " 0.004162981174886227,\n",
+       " 0.01170335989445448,\n",
+       " 0.06955578178167343,\n",
+       " -0.006459705997258425,\n",
+       " -0.0474691241979599,\n",
+       " 0.046462275087833405,\n",
+       " -0.016951700672507286,\n",
+       " -0.044204775243997574,\n",
+       " 0.0876055359840393,\n",
+       " -0.011179761029779911,\n",
+       " -0.03349969536066055,\n",
+       " -0.06208217144012451,\n",
+       " -0.034250225871801376,\n",
+       " 0.08156351000070572,\n",
+       " -0.07168596237897873,\n",
+       " 0.053431518375873566,\n",
+       " -0.07234346866607666,\n",
+       " 0.022193752229213715,\n",
+       " -0.04298567399382591,\n",
+       " 0.05550387501716614,\n",
+       " 0.03262005373835564,\n",
+       " -0.0396772176027298,\n",
+       " 0.007634110748767853,\n",
+       " 0.0012514055706560612,\n",
+       " 0.08653613924980164,\n",
+       " 0.03112587332725525,\n",
+       " 0.013859676197171211,\n",
+       " -0.06346270442008972,\n",
+       " 0.008234137669205666,\n",
+       " -0.0664508119225502,\n",
+       " -0.02160004712641239,\n",
+       " -0.005244308616966009,\n",
+       " -0.02493462711572647,\n",
+       " -0.032629676163196564,\n",
+       " 0.0550541989505291,\n",
+       " 3.3545372843946097e-06,\n",
+       " -0.020565861836075783,\n",
+       " 0.055341292172670364,\n",
+       " 0.000971417233813554,\n",
+       " -0.010774425230920315,\n",
+       " 0.04399687051773071,\n",
+       " 0.06394447386264801,\n",
+       " 0.05341280996799469,\n",
+       " 0.05489688739180565,\n",
+       " 0.05033294856548309,\n",
+       " 0.053510092198848724,\n",
+       " -0.038070742040872574,\n",
+       " -0.010110256262123585,\n",
+       " -0.031723957508802414,\n",
+       " -0.0802355483174324,\n",
+       " 0.041555847972631454,\n",
+       " -0.06084328889846802,\n",
+       " 0.06643778830766678,\n",
+       " -0.0866042897105217,\n",
+       " 0.07060369104146957,\n",
+       " 0.01672033779323101,\n",
+       " -1.2404458793469075e-08,\n",
+       " -0.07582750916481018,\n",
+       " 0.025639165192842484,\n",
+       " 0.026248151436448097,\n",
+       " 0.023220183327794075,\n",
+       " 0.054919153451919556,\n",
+       " -0.006486468482762575,\n",
+       " 0.08215194195508957,\n",
+       " 0.057163629680871964,\n",
+       " 0.03046865575015545,\n",
+       " 0.041295986622571945,\n",
+       " 0.017874939367175102,\n",
+       " -0.014628538861870766,\n",
+       " -0.05718224495649338,\n",
+       " 0.01761929877102375,\n",
+       " 0.0037083684001117945,\n",
+       " -0.014334204606711864,\n",
+       " 0.1021028608083725,\n",
+       " -0.04580814018845558,\n",
+       " 0.0077719916589558125,\n",
+       " 0.08955098688602448,\n",
+       " 0.05267607048153877,\n",
+       " 0.028813371434807777,\n",
+       " 0.02596612274646759,\n",
+       " -0.07043936103582382,\n",
+       " 0.0705067366361618,\n",
+       " 0.004548160824924707,\n",
+       " 0.033272046595811844,\n",
+       " 0.07552331686019897,\n",
+       " 0.027841603383421898,\n",
+       " -0.05113505572080612,\n",
+       " -0.029462425038218498,\n",
+       " 0.030866939574480057,\n",
+       " 0.10100466012954712,\n",
+       " 0.010525188408792019,\n",
+       " 0.09584273397922516,\n",
+       " 0.02385842613875866,\n",
+       " 0.009979864582419395,\n",
+       " 0.031288355588912964,\n",
+       " -0.09493004530668259,\n",
+       " 0.008176176808774471,\n",
+       " 0.07141781598329544,\n",
+       " 0.01870078034698963,\n",
+       " 0.030711382627487183,\n",
+       " -0.002485905308276415,\n",
+       " -0.05011261999607086,\n",
+       " -0.08141428232192993,\n",
+       " 0.10455755889415741,\n",
+       " -0.02113066427409649,\n",
+       " 0.08880795538425446,\n",
+       " -0.03725486621260643,\n",
+       " 0.006520931143313646,\n",
+       " -0.07525251060724258,\n",
+       " 0.09738913178443909,\n",
+       " 0.011076750233769417,\n",
+       " 0.08757461607456207,\n",
+       " 0.0625925064086914,\n",
+       " 0.02869865484535694,\n",
+       " -0.07295750081539154,\n",
+       " 0.03554556518793106,\n",
+       " 0.021982962265610695,\n",
+       " 0.08254528790712357,\n",
+       " -0.07415962219238281,\n",
+       " -0.007168069947510958,\n",
+       " 0.0672200471162796]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "generate_embedding(\"MongoDB is awesome\")"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "langchain",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
