added new working labs and data

--- a/code/1_vector-db-mongodb.ipynb
+++ b/code/1_vector-db-mongodb.ipynb
@@ -464,6 +464,33 @@
    "source": [
     "generate_embedding(\"MongoDB is awesome\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "384"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(generate_embedding(\"MongoDB is awesome\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
