semantic chunker implemented with HF embedding model

--- a/data/_preprocessing.ipynb
+++ b/data/_preprocessing.ipynb
@@ -1212,10 +1212,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from langchain_community.embeddings import HuggingFaceInferenceAPIEmbeddings\n",
     "from langchain_experimental.text_splitter import SemanticChunker\n",
     "import tqdm as notebook_tqdm\n",
     "\n",
@@ -1225,36 +1226,59 @@
     "\n",
     "hf_token = os.getenv(\"HF_EMBEDDINGS_MODEL\")\n",
     "embedding_url = \"https://api-inference.huggingface.co/pipeline/feature-extraction/sentence-transformers/all-MiniLM-L6-v2\"\n",
-    "\n",
     "model_name = \"sentence-transformers/all-MiniLM-L6-v2\"\n",
-    "model_kwargs = {'device': 'cpu'}\n",
-    "encode_kwargs = {'normalize_embeddings': False}\n",
-    "HFEmbeddings = HuggingFaceEmbeddings(\n",
-    "    model_name=model_name,\n",
-    "    model_kwargs=model_kwargs,\n",
-    "    encode_kwargs=encode_kwargs\n",
+    "\n",
+    "HFembeddings = HuggingFaceInferenceAPIEmbeddings(\n",
+    "    api_key=hf_token, model_name=model_name\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'HuggingFaceEmbeddings' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[12], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m text_splitter \u001b[38;5;241m=\u001b[39m SemanticChunker(\u001b[43mHFEmbeddings\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m)\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'HuggingFaceEmbeddings' object is not callable"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hardware their models run on. There are two ways to optimize your ML models: locally and globally. Locally is\n",
+      "when you optimize an operator or a set of operators of your model. Globally is\n",
+      "when you optimize the entire computation graph end to end. Four common techniques for standard local optimization:\n",
+      "1. Vectorization\n",
+      "2. Parallelization\n",
+      "3. Loop tiling\n",
+      "4. Operator fusion\n",
+      "Using ML to optimize ML models\n",
+      "There are a couple of drawbacks to hand-designed heuristics. First, they’re\n",
+      "nonoptimal.\n"
      ]
     }
    ],
    "source": [
-    "text_splitter = SemanticChunker(HFEmbeddings())"
+    "text_splitter = SemanticChunker(\n",
+    "    HFembeddings, breakpoint_threshold_type=\"interquartile\"\n",
+    "    )\n",
+    "\n",
+    "docs = text_splitter.create_documents([text])\n",
+    "print(docs[0].page_content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(docs))"
    ]
   }
  ],
